Fixed overlap on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,80 @@
-body{margin-top:105px}.navbar{-webkit-box-shadow:2px 2px 5px black;box-shadow:2px 2px 5px black;opacity:0.9;background-color:#ffff}.navbar .h3{display:inline}.navbar .nav-item{font-size:1.4rem;padding-right:1.4rem}#showcase{position:relative;background:url("../img/mountains.jpg");min-height:600px}#showcase .primary-overlay{background:rgba(50,146,166,0.8);position:absolute;top:0;left:0;width:100%;height:100%}#showcase .btn{background-color:#f78088}#newsletter .btn{background-color:#3292a6}#boxes .card{background-color:rgba(50,146,166,0.3)}.info-header{width:50%;margin:auto;border-bottom:1px #ddd solid}#authors img{margin-top:-50px}#authors .card:hover{background:#f78088;color:#ffff}#authors .fab{color:#ffff}#authors h1{color:#3292a6;padding-bottom:10px}#about h1{color:#3292a6;padding-bottom:10px}#contact .btn{background-color:#3292a6}@media (max-width: 768px){#showcase{min-height:500px}#showcase h1{font-size:4rem}.mb-resp{margin-bottom:1rem}}
+body {
+  margin-top: 105px;
+}
+.navbar {
+  -webkit-box-shadow: 2px 2px 5px black;
+  box-shadow: 2px 2px 5px black;
+  opacity: 0.9;
+  background-color: #ffff;
+}
+.navbar .h3 {
+  display: inline;
+}
+.navbar .nav-item {
+  font-size: 1.4rem;
+  padding-right: 1.4rem;
+}
+#showcase {
+  position: relative;
+  background: url("../img/mountains.jpg");
+  min-height: 600px;
+}
+#showcase .primary-overlay {
+  background: rgba(50, 146, 166, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#showcase .btn {
+  background-color: #f78088;
+}
+#showcase img {
+    height: auto;
+    width: 80%;
+  }
+#newsletter .btn {
+  background-color: #3292a6;
+
+}
+#boxes .card {
+  background-color: rgba(50, 146, 166, 0.3);
+}
+.info-header {
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid;
+}
+#authors img {
+  margin-top: -50px;
+}
+#authors .card:hover {
+  background: #f78088;
+  color: #ffff;
+}
+#authors .fab {
+  color: #ffff;
+}
+#authors h1 {
+  color: #3292a6;
+  padding-bottom: 10px;
+}
+#about h1 {
+  color: #3292a6;
+  padding-bottom: 10px;
+}
+#contact .btn {
+  background-color: #3292a6;
+}
+@media (max-width: 768px) {
+  #showcase {
+    min-height: 500px;
+  }
+  #showcase h1 {
+    font-size: 4rem;
+  }
+  .mb-resp {
+    margin-bottom: 1rem;
+  }
+}
